fix dark mode tampering for other features and make moon look nicer

--- a/src/main/webapp/app/for-you/for-you.component.html
+++ b/src/main/webapp/app/for-you/for-you.component.html
@@ -45,7 +45,7 @@
   </head>
   <body>
     <header>
-      <h1>Welcome Back, User 2651</h1>
+      <h1 style="background-color: transparent; color: #eeeeee">Welcome Back, User 2651</h1>
       <p>Prepare for your next journey?</p>
     </header>
     <div class="container">
