--- a/src/main/webapp/app/map-display/map-display.component.html
+++ b/src/main/webapp/app/map-display/map-display.component.html
@@ -1,6 +1,6 @@
 <div class="divContainer">
   <div class="routeMenuContainer">
-    <h2>Route Viewer</h2>
+    <h2 style="background-color: transparent; color: #eee">Route Viewer</h2>
     <form class="routeSelectorForm">
       <div>
         <label for="routeIdSelector">Select route: </label>
