--- a/src/main/webapp/app/rating/rating.component.html
+++ b/src/main/webapp/app/rating/rating.component.html
@@ -4,7 +4,7 @@
 
 <div class="divContainer">
   <div class="routeMenuContainer">
-    <h2>Create your own route!</h2>
+    <h2 style="background-color: transparent; color: #eee">Create your own route!</h2>
     <p *ngIf="routeFound">Total time: {{ travelTime }}h</p>
     <p *ngIf="routeFound">Total distance: {{ travelDistance }}km</p>
     <form>
