--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -277,7 +277,12 @@
           </ul>
         </li>
         <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-          <button class="nav-link" (click)="toggleDarkMode()" title="Switch between light/dark mode">
+          <button
+            class="nav-link"
+            (click)="toggleDarkMode()"
+            title="Switch between light/dark mode"
+            style="background-color: transparent; color: #eee; border: 2px solid #eee; border-radius: 10%"
+          >
             <span>
               <fa-icon [icon]="moonIcon"></fa-icon>
             </span>
