feat: cities in trending page are now selectable with keyboard

--- a/src/main/webapp/app/trending/trending.component.html
+++ b/src/main/webapp/app/trending/trending.component.html
@@ -3,21 +3,21 @@
 <h3>Featured Cities!</h3>
 <p>Pick a city, and click to see its popular routes</p>
 <div class="horizontal-scroll">
-  <div *ngFor="let city of cities" class="scroll-item" (click)="onCitySelected(city)">
-    <h4 class="city-name">{{ city.name }}</h4>
+  <div *ngFor="let city of cities" class="scroll-item">
+    <p class="city-name">
+      <button class="select-button" type="button" (click)="onCitySelected(city)">{{ city.name }}</button>
+    </p>
   </div>
 </div>
 
 <!-- Use ONLY filteredRoutes list for displaying routes -->
 <ul class="routes-list">
-  <<<<<<< HEAD
-  <li *ngFor="let route of filteredRoutes" (click)="onRouteClicked(route)">=======</li>
+  <li *ngFor="let route of filteredRoutes" (click)="onRouteClicked(route)"></li>
 
   <li *ngFor="let route of routes">
-    >>>>>>> 4e3267974dc5edb466b7cd5b9f7d0a0ff2eb5342
     <div class="route-item">
       <h3 class="route-title">
-        <button id="route-title-button" type="button" (click)="onRouteClicked(route)">{{ route.title }}</button>
+        <button class="select-button" type="button" (click)="onRouteClicked(route)">{{ route.title }}</button>
       </h3>
       <div class="route-info">
         <p>Rating: {{ route.rating }}</p>
@@ -32,9 +32,11 @@
 <h3>Ranked Routes:</h3>
 <p>Our best rated journeys!</p>
 <ul class="routes-list">
-  <li *ngFor="let route of routes" (click)="onRouteClicked(route)">
+  <li *ngFor="let route of routes">
     <div class="route-item">
-      <h3 class="route-title">{{ route.title }}</h3>
+      <h3 class="route-title">
+        <button class="select-button" type="button" (click)="onRouteClicked(route)">{{ route.title }}</button>
+      </h3>
       <div class="route-info">
         <p>Rating: {{ route.rating }}</p>
         <p>Distance: {{ route.distance }} km</p>
