--- a/src/main/webapp/app/trending/trending.component.scss
+++ b/src/main/webapp/app/trending/trending.component.scss
@@ -78,7 +78,7 @@
   /* Additional styles for the detailed view */
 }
 
-#route-title-button {
+.select-button {
   background-color: transparent;
   border-color: transparent;
 }
