--- a/src/main/webapp/app/entities/app-user/detail/app-user-detail.component.html
+++ b/src/main/webapp/app/entities/app-user/detail/app-user-detail.component.html
@@ -45,7 +45,7 @@
         <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span>Back</span>
       </button>
 
-      <button type="button" [routerLink]="['/app-user', appUser.id, 'edit']" class="btn btn-primary">
+      <button type="button" [routerLink]="['/app-user', appUser.id, 'edit']" class="btn btn-primary" *jhiHasAnyAuthority="'ROLE_ADMIN'">
         <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span>Edit</span>
       </button>
     </div>
