--- a/src/main/webapp/app/entities/review/detail/review-detail.component.html
+++ b/src/main/webapp/app/entities/review/detail/review-detail.component.html
@@ -52,7 +52,7 @@
         <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span>Back</span>
       </button>
 
-      <button type="button" [routerLink]="['/review', review.id, 'edit']" class="btn btn-primary">
+      <button type="button" [routerLink]="['/review', review.id, 'edit']" class="btn btn-primary" *jhiHasAnyAuthority="'ROLE_ADMIN'">
         <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span>Edit</span>
       </button>
     </div>
