--- a/src/main/webapp/app/entities/stop/detail/stop-detail.component.html
+++ b/src/main/webapp/app/entities/stop/detail/stop-detail.component.html
@@ -46,7 +46,7 @@
         <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span>Back</span>
       </button>
 
-      <button type="button" [routerLink]="['/stop', stop.id, 'edit']" class="btn btn-primary">
+      <button type="button" [routerLink]="['/stop', stop.id, 'edit']" class="btn btn-primary" *jhiHasAnyAuthority="'ROLE_ADMIN'">
         <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span>Edit</span>
       </button>
     </div>
