--- a/src/main/webapp/app/entities/tag/detail/tag-detail.component.html
+++ b/src/main/webapp/app/entities/tag/detail/tag-detail.component.html
@@ -24,7 +24,7 @@
         <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span>Back</span>
       </button>
 
-      <button type="button" [routerLink]="['/tag', tag.id, 'edit']" class="btn btn-primary">
+      <button type="button" [routerLink]="['/tag', tag.id, 'edit']" class="btn btn-primary" *jhiHasAnyAuthority="'ROLE_ADMIN'">
         <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span>Edit</span>
       </button>
     </div>
