font size icon added to navbar not working yet

--- a/src/main/webapp/app/entities/app-user/detail/app-user-detail.component.html
+++ b/src/main/webapp/app/entities/app-user/detail/app-user-detail.component.html
@@ -54,23 +54,22 @@
 
 <style>
   .row-md.jh-entity-details {
-    /* Maintain existing styles for the data list */
-    background-color: #444; /* Match route creation form background color */
-    color: #ddd; /* Match route creation form text color */
-    padding: 20px; /* Add padding for content */
-    border-radius: 4px; /* Add rounded corners */
+    background-color: #444;
+    color: #ddd;
+    padding: 20px;
+    border-radius: 4px;
   }
 
   .dt span {
-    font-weight: bold; /* Make definition terms bolder */
+    font-weight: bold;
   }
 
   .user-details-heading {
-    color: #ffffff; /* Match route creation form text color */
-    font-size: 2rem; /* Adjust font size as needed */
-    margin-bottom: 20px; /* Add some margin for spacing */
-    background-color: #444; /* Set background color to match data list */
-    padding: 5px 10px; /* Add optional padding for the heading */
-    border-radius: 4px; /* Add rounded corners */
+    color: #ffffff;
+    font-size: 2rem;
+    margin-bottom: 20px;
+    background-color: #444;
+    padding: 5px 10px;
+    border-radius: 4px;
   }
 </style>
