--- a/src/main/webapp/app/entities/route/detail/route-detail.component.html
+++ b/src/main/webapp/app/entities/route/detail/route-detail.component.html
@@ -72,19 +72,18 @@
 
 <style>
   .row-md.jh-entity-details {
-    /* Maintain existing styles for the data list */
-    background-color: #444; /* Adjust background color for data list (optional) */
-    color: #ddd; /* Match route creation form text color */
-    padding: 20px; /* Add padding for content */
-    border-radius: 4px; /* Add rounded corners */
+    background-color: #444;
+    color: #ddd;
+    padding: 20px;
+    border-radius: 4px;
   }
 
   h2[data-cy='routeDetailsHeading'] {
-    color: #ffffff; /* Match route creation form text color */
-    font-size: 2rem; /* Adjust font size as needed */
-    margin-bottom: 20px; /* Add some margin for spacing */
-    background-color: #444; /* Set background color to match data list */
-    padding: 5px 10px; /* Add optional padding for the heading */
+    color: #ffffff;
+    font-size: 2rem;
+    margin-bottom: 20px;
+    background-color: #444;
+    padding: 5px 10px;
     border-radius: 4px;
   }
 </style>
