--- a/src/main/webapp/app/entities/app-user/detail/app-user-detail.component.html
+++ b/src/main/webapp/app/entities/app-user/detail/app-user-detail.component.html
@@ -1,7 +1,9 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <div *ngIf="appUser">
-      <h2 class="user-details-heading" data-cy="appUserDetailsHeading"><span>App User</span></h2>
+      <h2 class="user-details-heading" data-cy="appUserDetailsHeading">
+        <span>{{ appUser.user?.login }}</span>
+      </h2>
       <hr />
 
       <jhi-alert-error></jhi-alert-error>
@@ -19,10 +21,6 @@
         <dt><span>Num Reviews</span></dt>
         <dd>
           <span>{{ appUser.numReviews }}</span>
-        </dd>
-        <dt><span>User</span></dt>
-        <dd>
-          <span>{{ appUser.user?.login }}</span>
         </dd>
         <dt><span>Tag</span></dt>
         <dd>
