minor changes to app user page

--- a/src/main/webapp/app/entities/app-user/detail/app-user-detail.component.html
+++ b/src/main/webapp/app/entities/app-user/detail/app-user-detail.component.html
@@ -10,11 +10,7 @@
       <jhi-alert></jhi-alert>
 
       <dl class="row-md jh-entity-details">
-        <dt><span>ID</span></dt>
-        <dd>
-          <span>{{ appUser.id }}</span>
-        </dd>
-        <dt><span>Num Routes</span></dt>
+        <dt><span>Num routes</span></dt>
         <dd>
           <span>{{ appUser.numRoutes }}</span>
         </dd>
